# shadow-rs

./: Cargo.toml  README.md
.github/workflows/: check.yml
example_shadow_clap/: Cargo.toml
example_shadow_clap/src/: main.rs
src/: lib.rs
